--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -1,86 +1,144 @@
-@import url('https://fonts.googleapis.com/css2?family=Overpass&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Overpass&display=swap");
 
-
-:root{
---White: hsl(0, 0%, 100%);
---LightGrey: hsl(217, 12%, 63%);
---MediumGrey: hsl(216, 12%, 54%);
---Darkgrey:hsl(213, 24%, 31%);
---DarkBlue: hsl(213, 19%, 18%);
---VeryDarkBlue: hsl(216, 12%, 8%);
---Orange: hsl(25, 97%, 53%)
+:root {
+  --White: hsl(0, 0%, 100%);
+  --LightGrey: hsl(217, 12%, 63%);
+  --MediumGrey:hsl(216, 12%, 54%) ;
+  --Darkgrey: hsl(213, 30%, 28%);
+  --DarkBlue: hsl(213, 19%, 18%);
+  --VeryDarkBlue: hsl(216, 12%, 8%);
+  --Orange: hsl(25, 97%, 53%);
 }
 
-*{
-    padding: 0;
-    margin: 0;
-    font-family: 'Overpass', sans-serif;
-  }
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Overpass", sans-serif;
+}
+body{
+  background-color: var(--VeryDarkBlue);
+}
 
-  .maincontent{
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--VeryDarkBlue);
-    
-  }
+.maincontent {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: var(--VeryDarkBlue);
+}
 
-  #firstpage{
-    width: 35%;
-    height: 35%;
-    border-radius: 40px;
-    background:var(--DarkBlue);
-    position: relative;
-    padding: 35px;
-    
+#firstpage {
+  max-width: 350px;
+  max-height: 350px;
+  border-radius: 25px;
+  background: var(--DarkBlue);
+  position: relative;
+  padding: 35px;
+  display: flex;
+  flex-direction: column;
+}
+#numeric {
+  background-color: var(--Darkgrey);
+  color: var(--LightGrey);
+  border: none;
+  padding: 5px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  margin-right: 25px;
+}
+#numeric:hover{
+  background-color: var(--LightGrey);
+  color: white;
+}
+#numeric:active{
+  background-color: var(--Orange);
+  color: white;
+}
+#buttons :nth-child(5) {
+  margin-right: 0px;
+}
+#submit {
+  background-color: var(--Orange);
+  color: white;
+  border: none;
+  padding: 5px;
+  height: 40px;
+  width: 350px;
+  border-radius: 40px;
+  margin-top: 25px;
+  font-size: 1em;
+  font-weight: bold;
+  justify-content: center;
+}
+#submit:active{
+  background-color: white;
+  color: var(--Orange);
+}
+#firstpage>h1{
+margin-top: 25px;
+}
+#firstpage>p{
+  margin-top: 10px;
   }
-  #numeric{
-    background-color: var(--Darkgrey);
-    color: var(--LightGrey);
-    border: none;
-    padding: 5px;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    margin-right: 15px;
+h1 {
+  color: white;
+}
+p {
+  color: var(--MediumGrey);
+}
+#star {
+  background-color: var(--Darkgrey);
+  border: none;
+  padding: 5px;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+}
+#parent {
+  display: block;
+  margin: auto;
+}
+#buttons {
+  margin-top: 25px;
+  display: flex;
+  justify-content: center;
+}
+.secondpage{
+  box-sizing: 350px 350px;
+  max-width: 350px;
+  max-height: 350px;
+  border-radius: 25px;
+  background: var(--DarkBlue);
+  position: relative;
+  padding: 35px;
+  display: none;
 
-  }
-  button :nth-child(5){
-    margin: 0;
-  }
-  #submit{
-    background-color: var(--Orange);
-    color: white;
-    border: none;
-    padding: 5px;
-    height: 40px;
-    width: 350px;
-    border-radius: 40px;
-    margin-top: 10px;
-    justify-content: center;
+}
+#score{
+  background-color: var(--Darkgrey);
+  color: var(--Orange);
+  border: none;
+  padding: 5px;
+  height: 20px;
+  width: 200px;
+  border-radius: 40px;
+  margin-top: 25px;
+  font-size: 1em;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.secondpage>h1{
+margin-top: 25px;
+}
+.secondpage>p{
+  margin-top: 10px;
+  text-align: center;
+}
 
-  }
-  #firstpage h1{
-    color: white;
-    margin: 20px 0 10px;
-
-  }
-  #firstpage p{
-    color: var(--MediumGrey);
-  }
-  #star{
-    background-color: var(--Darkgrey);
-    border: none;
-    padding: 5px;
-    height: 45px;
-    width: 45px;
-    border-radius: 50%;
-  }
-  #parent{
-    display: block;
-    margin: auto
-  }
-  #buttons{
-   margin-top: 30px;
-  }
