--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -108,7 +108,7 @@ p {
   display: flex;
   justify-content: center;
 }
-.secondpage{
+#secondpage{
   box-sizing: 350px 350px;
   max-width: 350px;
   max-height: 350px;
@@ -116,7 +116,11 @@ p {
   background: var(--DarkBlue);
   position: relative;
   padding: 35px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   display: none;
+  flex-direction: column;
+  align-items: center;
 
 }
 #score{
@@ -134,10 +138,10 @@ p {
   justify-content: center;
   align-items: center;
 }
-.secondpage>h1{
+#secondpage>h1{
 margin-top: 25px;
 }
-.secondpage>p{
+#secondpage>p{
   margin-top: 10px;
   text-align: center;
 }
